--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,6 +1,19 @@
-<h1>Stupid Coach</h1>
-<p><%= @question %></p>
-<p><strong>You</strong></p>
-<p><%= @answer %></p>
-<p><strong>Your Coach</strong></p>
-<%= link_to "Ask a new question", "/ask" %>
+<h1>Stupid Coaching</h1>
+
+<blockquote>
+  <p>
+    <% if @question.blank? %>
+      😶
+    <% else %>
+      <%= @question %>
+    <% end %>
+  </p>
+  <cite>You</cite>
+</blockquote>
+
+<blockquote class="coach">
+  <p><%= @answer %></p>
+  <cite>Your coach</cite>
+</blockquote>
+
+<%= link_to "Ask a new question", ask_path %>
